--- a/panstrap.less
+++ b/panstrap.less
@@ -1,4 +1,49 @@
 @import "bootstrap/less/bootstrap.less";
+
+section.level1, section.level2 {
+    .make-md-column(12);
+    .make-row();
+}
+section.level1 > figure:extend(.pull-right),
+section.level2 > figure:extend(.pull-right) {
+        .make-md-column(4);
+}
+section.level3 { .make-md-column(9); .make-md-column-offset(1); }
+section.level4 { .make-md-column(6) }
+section.level5 { .make-md-column(4) }
+section.level6 { .make-md-column(3) }
+
+a[href$='#character-creation'] { background: url('icons/lorc/originals/svg/drama-masks.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#background'] { background: url('icons/lorc/originals/svg/journey.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#why-did-you-come'] { background: url('icons/lorc/originals/svg/star-pupil.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#where-are-you-from'] { background: url('icons/lorc/originals/svg/globe.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#hierarchy'] { background: url('icons/lorc/originals/svg/minions.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#stats'] { background: url('icons/lorc/originals/svg/suits.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#acuity'] { background: url('icons/lorc/originals/svg/brainstorm.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#body'] { background: url('icons/lorc/originals/svg/strong.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#heart'] { background: url('icons/lorc/originals/svg/shining-heart.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#will'] { background: url('icons/lorc/originals/svg/burning-passion.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#traits'] { background: url('icons/lorc/originals/svg/poker-hand.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#relationships'] { background: url('icons/lorc/originals/svg/telepathy.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#belongings'] { background: url('icons/lorc/originals/svg/knapsack.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#initiation-to-torei'] { background: url('icons/lorc/originals/svg/slavery-whip.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#roll-stats-and-relationships'] { background: url('icons/lorc/originals/svg/cubes.svg') center left no-repeat; padding-left: 1.4em; }
+
+a[href$='#conflict'] { background: url('icons/lorc/originals/svg/back-forth.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#who-goes-first'] { background: url('icons/lorc/originals/svg/stopwatch.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#who-wins'] { background: url('icons/lorc/originals/svg/life-in-the-balance.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#challenge'] { background: url('icons/lorc/originals/svg/smoking-finger.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#response'] { background: url('icons/lorc/originals/svg/checked-shield.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#change-the-game'] { background: url('icons/lorc/originals/svg/magic-swirl.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#help'] { background: url('icons/lorc/originals/svg/all-for-one.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#give-in'] { background: url('icons/lorc/originals/svg/dove.svg') center left no-repeat; padding-left: 1.4em; }
+
+
+a[href$='#fallout'] { background: url('icons/lorc/originals/svg/thunder-struck.svg') center left no-repeat; padding-left: 1.4em; }
+a[href$='#experience'] { background: url('icons/lorc/originals/svg/gift-of-knowledge.svg') center left no-repeat; padding-left: 1.4em; }
+
+a[href$='#play-advice'] { background: url('icons/lorc/originals/svg/light-bulb.svg') center left no-repeat; padding-left: 1.4em; }
+
 nav:extend(.nav all) {}
 table:extend(.table all, .table-striped all) {}
 header:extend(.jumbotron all) {
@@ -18,17 +63,15 @@ section>p>img:extend(.img-rounded all, .pull-right all),
     max-width: 4em;
     margin-right: 0.5em;
 }
+.stat > h6:extend(h1) {}
 section.harm:extend(.text-center all), section.action:extend(.text-center all), section.die:extend(.text-center all) { }
-section.harm h4 a:extend(.label),
-section.die h4 a:extend(.label) {}
-section.bg-success h4 a:extend(.label, .label-success) {}
-section.bg-info h4 a:extend(.label, .label-info) {}
-section.bg-warning h4 a:extend(.label, .label-warning) {}
-section.bg-danger h4 a:extend(.label, .label-danger) {}
-section.bg-success figure img,
-section.bg-info figure img,
-section.bg-warning figure img,
-//section.bg-danger figure img { opacity: 0.7; }
+section.harm h6 a:extend(.label),
+section.die h5 a:extend(.label) {}
+section.bg-success h6 a:extend(.label, .label-success) {}
+section.bg-info h5 a:extend(.label, .label-info) {}
+section.bg-info h6 a:extend(.label, .label-info) {}
+section.bg-warning h6 a:extend(.label, .label-warning) {}
+section.bg-danger h6 a:extend(.label, .label-danger) {}
 figure img:extend(.img-rounded) { max-width: 8em;}
 
 code.d10:extend(.bg-success),
@@ -43,12 +86,6 @@ code.d4:after { content: "d4"; }
 
 nav > ul :extend(.list-group all) { }
 nav > ul > li:extend(.list-group-item all) { }
-nav > ul > li > a:extend(.btn all, .btn-lg all, .btn-block all) {}
-nav > ul > li > ul > li {
-    margin-left: -30px;
-    list-style-type: none;
-}
-section.row { margin: 0; }
 
 @media (min-width: 767px) {
     .affix {
@@ -90,3 +127,4 @@ a:visited {
 @list-group-border: @table-border-color;
 @code-color: @gray-lighter;
 @code-bg: @well-bg;
+
