Made the result self-contained

--- a/panstrap.less
+++ b/panstrap.less
@@ -59,6 +59,8 @@ header:extend(.jumbotron all) {
     background-height: 100%;
     background-repeat:no-repeat;
     background-position: right;
+    text-shadow: 1px 1px 1px #000;
+    color: @brand-primary;
 }
 dl:extend(.dl-horizontal all) {}
 
