add local torei icon, and an opening setting section

--- a/panstrap.less
+++ b/panstrap.less
@@ -16,6 +16,18 @@ section.level6 { .make-md-column(3) }
     padding-left: 1.4em;
 }
 
+
+a[href$='#torei'] { 
+    background: url('ziggurat.svg') center left no-repeat;
+    padding-left: 1.4em;
+}
+a[href$='#the-star'] { .image-link('orbital'); }
+a[href$='#the-space-elevator'] { .image-link('lift'); }
+a[href$='#the-ringdoms'] { .image-link('spiked-collar'); }
+a[href$='#the-antipodes'] { .image-link('wheat'); }
+a[href$='#the-badlands'] { .image-link('earth-spit'); }
+a[href$='#the-ziggurats'] { .image-link('artificial-hive'); }
+
 a[href$='#character-creation'] { .image-link('drama-masks'); }
 a[href$='#background'] { .image-link('journey');}
 a[href$='#male-or-female'] { .image-link('duality');}
@@ -68,7 +80,7 @@ a[href$='#keep-revealing'] { .image-link('magnifying-glass');}
 nav:extend(.nav all) {}
 table:extend(.table all, .table-striped all) {}
 header:extend(.jumbotron all) {
-    background-image:url('icons/lorc/originals/svg/chained-heart.svg');
+    background-image:url('ziggurat.svg');
     background-color: black;
     background-height: 100%;
     background-repeat:no-repeat;
