--- a/panstrap.less
+++ b/panstrap.less
@@ -67,18 +67,22 @@ section.level6 { .make-md-column(3) }
 .image-link(@filestem) {
     @filename: %('icons/lorc/originals/svg/%s.svg', @filestem);
     background: url(@filename) center left no-repeat;
-    padding-left: 1.4em;
+    padding-left: 1.2em;
 }
 
 
 a[href$='#torei'] { 
     background: url('ziggurat.svg') center left no-repeat;
-    padding-left: 1.4em;
+    padding-left: 1.2em;
 }
 a[href$='#the-star'] { .image-link('orbital'); }
 a[href$='#the-space-elevator'] { .image-link('lift'); }
 a[href$='#the-ringdoms'] { .image-link('spiked-collar'); }
 a[href$='#the-antipodes'] { .image-link('wheat'); }
+a[href$='#the-ministries'] { .image-link('capitol'); }
+a[href$='#ministry-of-truants'] { .image-link('handcuffs'); }
+a[href$='#ministry-of-improvements'] { .image-link('doctor-face'); }
+a[href$='#ministry-of-wombs'] { .image-link('tied-scroll'); }
 a[href$='#the-badlands'] { .image-link('earth-spit'); }
 a[href$='#the-ziggurats'] { .image-link('artificial-hive'); }
 
@@ -89,10 +93,10 @@ a[href$='#why-did-you-leave'] { .image-link('rocket-flight');}
 a[href$='#where-are-you-from'] { .image-link('globe');}
 a[href$='#hierarchy'] { .image-link('minions');}
 a[href$='#stats'] { .image-link('suits');}
-a[href$='#acuity'] { .image-link('brainstorm');}
-a[href$='#body'] { .image-link('strong');}
-a[href$='#heart'] { .image-link('shining-heart');}
-a[href$='#will'] { .image-link('burning-passion');}
+p > a[href$='#acuity'] { .image-link('brainstorm');}
+p > a[href$='#body'] { .image-link('strong');}
+p > a[href$='#heart'] { .image-link('shining-heart');}
+p > a[href$='#will'] { .image-link('burning-passion');}
 a[href$='#traits'] { .image-link('poker-hand');}
 a[href$='#relationships'] { .image-link('telepathy');}
 a[href$='#allocate-your-dice'] { .image-link('checkbox-tree');}
@@ -154,16 +158,9 @@ h1,h2,h3,h4,h5,h6,a { font-family: 'Orbitron'; }
 
 section>p>img:extend(.img-rounded all, .pull-right all), 
 .action:extend(.well all), .stat:extend(.well all) {}
-.stat img:extend(.img-circle all, .pull-left all) { 
-    max-width: 4em;
-    margin-right: 0.5em;
-}
-.die > h5:extend(h3) {}
-.die > h6:extend(h3) {}
-.action > h6:extend(h3) {}
-.harm > h6:extend(h3) {}
-.stat > h6:extend(h1) {}
-section.harm:extend(.text-center all), section.action:extend(.text-center all), section.die:extend(.text-center all) { }
+.die > h5:extend(h3), .die > h6:extend(h3), .action > h6:extend(h3),
+.harm > h6:extend(h3), .stat > h6:extend(h3) { text-align: center;}
+section.stat > figure:extend(.text-center all), section.harm:extend(.text-center all), section.action:extend(.text-center all), section.die:extend(.text-center all) { }
 section.harm h6 a:extend(.label),
 section.die h5 a:extend(.label) {text-shadow: 1px 1px 1px #000;}
 section.bg-success h6 a:extend(.label, .label-success) {text-shadow: 1px 1px 1px #000;}
@@ -171,7 +168,7 @@ section.bg-info h5 a:extend(.label, .label-info),
 section.bg-info h6 a:extend(.label, .label-info) {text-shadow: 1px 1px 1px #000;}
 section.bg-warning h6 a:extend(.label, .label-warning) {text-shadow: 1px 1px 1px #000;}
 section.bg-danger h6 a:extend(.label, .label-danger) {text-shadow: 1px 1px 1px #000;}
-figure img:extend(.img-rounded) { max-width: 8em;}
+figure img:extend(.img-rounded) { max-width: 8em !important;}
 
 code.d10:extend(.bg-success),
 code.d8:extend(.bg-info),
@@ -259,4 +256,8 @@ strong, em, a:visited {
     font-family: 'Orbitron';
     src: url('orbitron/webfonts/orbitron-bold-webfont.woff') format('woff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
     url('orbitron/webfonts/orbitron-bold-webfont.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
+
+@media print {
+    section.level6, section.level5, section.level4 { page-break-inside: avoid; }
 }
