Roll back blow types, use shorter names for harm

--- a/panstrap.less
+++ b/panstrap.less
@@ -124,8 +124,8 @@ figcaption > a[href$='#reversing-the-blow'], p > a[href$='#reversing-the-blow'] 
 figcaption > a[href$='#blocking'], p > a[href$='#blocking'] { .image-link('arrows-shield'); }
 figcaption > a[href$='#taking-the-blow'], p > a[href$='#taking-the-blow'] { .image-link('broken-shield'); }
 a[href$='#short-term-harm'] { .image-link('cut-palm');}
-a[href$='#permanent-harm'] { .image-link('pummeled');}
-a[href$='#serious-permanent-harm'] { .image-link('internal-injury');}
+a[href$='#scar'] { .image-link('stitched-wound');}
+a[href$='#trauma'] { .image-link('internal-injury');}
 a[href$='#experience'] { .image-link('gift-of-knowledge');}
 
 a[href$='#play-advice'] { .image-link('light-bulb');}
