stub for NPC creation section

--- a/panstrap.less
+++ b/panstrap.less
@@ -134,6 +134,7 @@ a[href$='#say-yes-or-roll-the-dice'] { .image-link('uncertainty');}
 a[href$='#build-situations-not-plots'] { .image-link('dark-squad');}
 a[href$='#share-the-setting'] { .image-link('fountain-pen');}
 a[href$='#keep-revealing'] { .image-link('magnifying-glass');}
+a[href$='#creating-npcs'] { .image-link('dozen');}
 
 nav:extend(.nav all) {}
 table:extend(.table all, .table-striped all) {}
