fix odd section level problem caused by text move

--- a/panstrap.less
+++ b/panstrap.less
@@ -104,6 +104,7 @@ a[href$='#belongings'] { .image-link('knapsack');}
 a[href$='#torean-objects'] { .image-link('whip');}
 a[href$='#off-world-objects'] { .image-link('circuitry');}
 a[href$='#biotech'] { .image-link('biohazard');}
+a[href$='#starting-equipment'] { .image-link('belt-buckles');}
 a[href$='#guns-are-complicated'] { .image-link('bolter-gun');}
 a[href$='#initiation-to-torei'] { .image-link('slavery-whip');}
 a[href$='#example-character'] { .image-link('aura');}
