allow blockquotes inside example divs

--- a/panstrap.less
+++ b/panstrap.less
@@ -173,6 +173,7 @@ figure img:extend(.center-block, .img-rounded) { max-width: 8em !important;}
 
 section.example:extend(blockquote) {
     > h3 a:before { content: 'Example: '; };
+    blockquote:extend(.well) {};
 }
 
 code.d10:extend(.bg-success),
