tighten up the section headings in the nav

--- a/panstrap.less
+++ b/panstrap.less
@@ -200,7 +200,7 @@ code.d4:after { content: "d4"; }
 nav > ul:extend(.list-group all) { }
 nav  ul:extend(.list-unstyled all) { }
 nav > ul > li:extend(.list-group-item all) { }
-nav > ul > li > a:extend(.btn) { padding-left: 3em !important;}
+nav > ul > li > a:extend(.btn) { padding-left: 3em !important; margin-left: -10px; margin-top: -5px;}
 
 @media (min-width: 767px) {
     .affix {
