Fix bold die text in firefox issue #2

--- a/panstrap.less
+++ b/panstrap.less
@@ -187,6 +187,7 @@ code.d6:extend(.bg-warning),
 code.d4:extend(.bg-danger) {}
 code { 
     font-family: 'Orbitron'; 
+    font-weight: normal !important;
     -moz-box-shadow:    inset 0 0 5px @gray-lighter;
     -webkit-box-shadow: inset 0 0 5px @gray-lighter;
     box-shadow:         inset 0 0 5px @gray-lighter;
