pad the bottom of the inset h6 sections

--- a/panstrap.less
+++ b/panstrap.less
@@ -160,6 +160,7 @@ h1,h2,h3,h4,h5,h6,a { font-family: 'Orbitron'; }
 
 section>p>img:extend(.img-rounded all, .pull-right all), 
 .action:extend(.well all), .stat:extend(.well all) {}
+.die, .harm {padding-bottom: 15px;}
 .die > h5:extend(h3), .die > h6:extend(h3), .action > h6:extend(h4),
 .harm > h6:extend(h3), .stat > h6:extend(h3) { text-align: center;}
 section.harm h6 a:extend(.label),
