make tables in examples stripe

--- a/panstrap.less
+++ b/panstrap.less
@@ -180,6 +180,7 @@ section.example:extend(.well-sm, .well) {
         };
         a:before { content: 'Example: '; };
     }
+    tr.even {background-color: @gray-darker;}
 }
 
 code.d10:extend(.bg-success),
