Add icons for action types, NPC sections

--- a/panstrap.less
+++ b/panstrap.less
@@ -121,6 +121,10 @@ a[href$='#help'] { .image-link('all-for-one');}
 a[href$='#give-in'], a[href$='#giving-in-is-awesome'] { .image-link('prayer');}
 
 a[href$='#fallout'], a[href$='#fallout-dice'], a[href$='#how-to-think-about-fallout'] { .image-link('thunder-struck');}
+p > a[href$='#safe'] { .image-link('screaming'); }
+p > a[href$='#physical'] { .image-link('grab'); }
+p > a[href$='#violent'] { .image-link('dripping-knife'); }
+p > a[href$='#perilous'] { .image-link('backstab'); }
 figcaption > a[href$='#reversing-the-blow'], p > a[href$='#reversing-the-blow'] { .image-link('shield-reflect'); }
 figcaption > a[href$='#blocking'], p > a[href$='#blocking'] { .image-link('arrows-shield'); }
 figcaption > a[href$='#taking-the-blow'], p > a[href$='#taking-the-blow'] { .image-link('broken-shield'); }
@@ -135,7 +139,8 @@ a[href$='#say-yes-or-roll-the-dice'] { .image-link('uncertainty');}
 a[href$='#build-situations-not-plots'] { .image-link('dark-squad');}
 a[href$='#share-the-setting'] { .image-link('fountain-pen');}
 a[href$='#keep-revealing'] { .image-link('magnifying-glass');}
-a[href$='#creating-npcs'] { .image-link('dozen');}
+a[href$='#creating-npcs'] { .image-link('backup');}
+a[href$='#npc-crowds'] { .image-link('dozen');}
 
 nav:extend(.nav all) {}
 table:extend(.table all, .table-striped all) {}
